fix(z-pattern): text alignment

--- a/blocks/z-pattern/z-pattern.css
+++ b/blocks/z-pattern/z-pattern.css
@@ -109,7 +109,7 @@
 
   .z-pattern > div[class^="z-row"] > div {
     flex: 0 0 40%;
-    text-align: left;
+    text-align: center;
     max-width: 500px;
   }
 
@@ -122,6 +122,7 @@
     background-color: #FFF;
     padding: 0 50px;
     padding-left: 70px;
+    text-align: center;
   }
 
   .z-pattern .z-row-odd > div:first-of-type {
@@ -148,7 +149,7 @@
 
   .z-pattern .z-row-even > div:first-of-type picture img {
     position: relative;
-    right: -40px;
+    right: -60px;
   }
 
   .z-pattern .z-row-even:last-of-type > div:first-of-type img {
@@ -167,18 +168,30 @@
   .z-pattern.reverse > div.z-row-even > div:last-child {
     position: relative;
     right: -50px;
-    padding: 60px;
+    padding: 30px 60px;
   }
 
-  .z-pattern .z-row-even > div:last-of-type h3 {
-    font-size: 1.5em;
-  }
-
-  .z-pattern .z-row-odd > div:last-of-type h3 {
-    font-size: 1.5em;
+  .z-pattern > div[class^="z-row"] > div:last-of-type h3 {
+    margin-top: 60px;
+    font-size: 1.4em;
   }
 
   .z-pattern-container .default-content-wrapper {
     padding-bottom: 50px;
+  }
+
+  .z-pattern > div[class^="z-row"] > div:last-of-type p {
+    position: relative;
+    font-size: 19px;
+    margin-bottom: 60px;
+  }
+
+  .z-pattern .z-row-even > div:last-of-type strong {
+    display: block;
+    text-align: left;
+  }
+
+  .z-pattern > div[class^="z-row"] > div:last-of-type strong {
+    position: absolute;
   }
 }
